# KalimCoder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  start_training.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/BigCodeBench/: README.md  results.json
benchmarks/HumanEval/: README.md  results.json
benchmarks/LiveCodeBench/: README.md  results.json
benchmarks/MBPP/: README.md  results.json
benchmarks/RepoBench/: README.md  results.json
benchmarks/SWE-bench/: README.md  results.json
configs/: datasets.yaml  dpo.yaml  inference.yaml  mixture.yaml  pipeline.yaml  qlora.yaml  qwen3_sft.yaml  qwen3_sft_backup.yaml
configs/agent/: agent.yaml
configs/dataset/: codealpaca.yaml
configs/evaluation/: humaneval.yaml
configs/model/: qwen3_8b.yaml
configs/training/: dpo.yaml  sft_qlora.yaml
data/: README.md  dataset_info.json
docs/: architecture.md  experiments.md  roadmap.md  streaming_pipeline.md  training_notes.md
experiments/001_qwen_base/: config.yaml  notes.md
experiments/002_python_dataset/: config.yaml  notes.md
experiments/003_cpp_dataset/: checkpoint_link.txt  config.yaml  notes.md
experiments/004_bug_fix/: config.yaml  notes.md
experiments/005_dpo/: config.yaml  notes.md
experiments/006_repo_agent/: config.yaml  metrics.json  notes.md
models/Qwen3-KaleemCoder-v1/: README.md  config.json
notebooks/: 01_environment_setup.ipynb  02_download_model.ipynb  03_run_inference.ipynb  04_prepare_dataset.ipynb  05_train_sft.ipynb  06_evaluate.ipynb  07_dpo_training.ipynb  08_agent.ipynb
scripts/: build_training_dataset.py  clean_dataset.py  download_datasets.py  download_model.py  evaluate.py  merge_lora.py  prepare_dataset.py  run_pipeline.py  tokenize_dataset.py  train.py  validate_dataset.py
src/: __init__.py
src/agent/: __init__.py  agent.py
src/data/: __init__.py  adapters.py  cleaner.py  dataset_info.py  dedup.py  formatter.py  loader.py  manifest.py  mixer.py  quality.py  registry.py  schema.py  state.py  streaming.py  writer.py
src/data/sources/: __init__.py  base.py  git_repo.py  huggingface.py  jsonl.py  local_arrow.py  parquet.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  generator.py
src/models/: __init__.py  loader.py
src/training/: __init__.py  callbacks.py
src/utils/: __init__.py  io.py  logging.py
tests/: conftest.py  test_build_training_dataset.py  test_data.py  test_metrics.py  test_streaming_pipeline.py
